--- a/Wine_Kaggle.ipynb
+++ b/Wine_Kaggle.ipynb
@@ -22,25 +22,25 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MishalM/Wine_Kaggle/blob/main/Wine_Kaggle.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/101nazrin/Wine_Kaggle/blob/main/Wine_Kaggle.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AYYdtE2OLdvu",
-        "outputId": "69f1631c-4e15-42f0-f73a-4b9f6388e2d1"
+        "outputId": "0363bb05-0bf3-4c74-f5f6-6ceb91b5930a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -73,13 +73,15 @@
         "# test data set\n",
         "x_test = pd.read_csv('/content/sample_data/test.csv')\n",
         "x_test = x_test.drop('Id', axis = 1)\n",
+        "\n",
         "y_test = pd.read_csv('/content/sample_data/sample_submission.csv')\n",
-        "y_test = y_test.drop('Id', axis = 1)\n"
+        "y_test = y_test.drop('Id', axis = 1)\n",
+        "y_test = y_test['quality']\n"
       ],
       "metadata": {
         "id": "Xv8z7_01LqvF"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -101,9 +103,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "93c9a144-a057-4e17-cc6e-120bc054bfe3"
+        "outputId": "a0aa68c0-219c-42c3-d46c-6fb6724f4a7e"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,12 +163,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 267
+          "height": 206
         },
         "id": "ujV-gMFPPnNB",
-        "outputId": "60af3d85-3269-453c-a2ba-d9db1071130d"
+        "outputId": "46f6d29b-55fd-4e35-f728-a423909ae008"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,7 +197,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a1d227e3-2e07-43f4-84d4-9f0f2e0faab8\">\n",
+              "  <div id=\"df-ae24ca83-3e0b-48c0-9be9-b7f57d68a853\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -308,7 +310,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a1d227e3-2e07-43f4-84d4-9f0f2e0faab8')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ae24ca83-3e0b-48c0-9be9-b7f57d68a853')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -359,12 +361,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a1d227e3-2e07-43f4-84d4-9f0f2e0faab8 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ae24ca83-3e0b-48c0-9be9-b7f57d68a853 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a1d227e3-2e07-43f4-84d4-9f0f2e0faab8');\n",
+              "          const element = document.querySelector('#df-ae24ca83-3e0b-48c0-9be9-b7f57d68a853');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -387,7 +389,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 7
         }
       ]
     },
@@ -399,12 +401,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 267
+          "height": 206
         },
         "id": "pkrkfX0RPm-r",
-        "outputId": "2189ce28-3a5e-43e4-8d82-84d5ac263e94"
+        "outputId": "238f843f-856a-4592-e1c3-8f02909cac48"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -433,7 +435,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b6bb9a6b-9451-4de4-b11d-81dcc2fe870a\">\n",
+              "  <div id=\"df-e2409095-caa8-4664-a122-cd4c8a98351d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -540,7 +542,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b6bb9a6b-9451-4de4-b11d-81dcc2fe870a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e2409095-caa8-4664-a122-cd4c8a98351d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -591,12 +593,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b6bb9a6b-9451-4de4-b11d-81dcc2fe870a button.colab-df-convert');\n",
+              "          document.querySelector('#df-e2409095-caa8-4664-a122-cd4c8a98351d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b6bb9a6b-9451-4de4-b11d-81dcc2fe870a');\n",
+              "          const element = document.querySelector('#df-e2409095-caa8-4664-a122-cd4c8a98351d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -619,7 +621,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 8
         }
       ]
     },
@@ -630,154 +632,27 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
+          "base_uri": "https://localhost:8080/"
         },
         "id": "r8nvXfNtPm23",
-        "outputId": "a658e380-8270-47c2-ca8b-396b8cbeebed"
+        "outputId": "f8778eed-fafb-4982-acff-8a2a7d14472a"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   quality\n",
-              "0        5\n",
-              "1        5\n",
-              "2        5\n",
-              "3        5\n",
-              "4        5"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-b42fbcc8-1605-4a0e-9a7d-ae826051b39f\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>quality</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b42fbcc8-1605-4a0e-9a7d-ae826051b39f')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-b42fbcc8-1605-4a0e-9a7d-ae826051b39f button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b42fbcc8-1605-4a0e-9a7d-ae826051b39f');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
+              "0    5\n",
+              "1    5\n",
+              "2    5\n",
+              "3    5\n",
+              "4    5\n",
+              "Name: quality, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 9
         }
       ]
     },
@@ -793,9 +668,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ik_vtjTsLqrs",
-        "outputId": "28762540-5672-476f-9008-d33b118ed900"
+        "outputId": "9f532d3b-23ab-407e-f26e-2e9be9250ae8"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,9 +693,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3Mt5SoWoO_PL",
-        "outputId": "353ec329-43ef-4c84-9d96-cdcbf0bea1d6"
+        "outputId": "b91e699d-9cb1-4ffe-a45c-bbc67d141375"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -842,7 +717,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 11
         }
       ]
     },
@@ -856,12 +731,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 969
+          "height": 970
         },
         "id": "GrZ_Ty6iQGwm",
-        "outputId": "f58491d5-11eb-4251-f825-614385e1c1f5"
+        "outputId": "17c69b20-b140-43e0-bc16-38af04548727"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -871,7 +746,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 12
         },
         {
           "output_type": "display_data",
@@ -903,9 +778,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c897d3fe-a38a-44b6-fb9e-774b4405de9b"
+        "outputId": "60dacfac-3682-493a-e72b-ecab5b3d90f9"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -926,9 +801,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# creating bins for the target variable"
+      ],
+      "metadata": {
+        "id": "uWyC6TpLCyyQ"
+      },
+      "execution_count": 16,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -951,9 +837,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "76291504-bd71-45d8-c9a0-e4f18c9d354c"
+        "outputId": "dca96f1a-0a1a-476a-d161-65ecd44b8400"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -980,6 +866,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cAlqwfzOCxB4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# Training and testing using Random Forest Classifier\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
@@ -996,21 +891,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0d9d27d9-d5c4-47d7-d3b7-2dbbb6483206"
+        "outputId": "e1dc02d7-d902-4494-e2f2-2fb63ae82c20"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy = 46.0 %\n",
-            "\n",
-            "Confussion matrix:\n",
-            "[[637 544 190   1]\n",
-            " [  0   0   0   0]\n",
-            " [  0   0   0   0]\n",
-            " [  0   0   0   0]]\n"
+            "Accuracy = 45.0 %\n"
           ]
         }
       ]
